More glsl lexer optimizations